# entre-deux

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  .env.production.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_fhir_tables.py  002_add_users_table.py
backend/scripts/: seed_demo.py
backend/src/: main.py
backend/src/agents/: brief_agent.py  explanation_agent.py  journal_agent.py  mistral_utils.py  ocr_agent.py  transcribe_agent.py
backend/src/api/: dependencies.py
backend/src/config/: settings.py
backend/src/db/: base.py  engine.py  tables.py
backend/src/middleware/: auth.py  consent.py  rate_limit.py
backend/src/models/: fhir_constants.py  fhir_helpers.py  schemas.py
backend/src/services/: audit_service.py  auth_service.py  consent_service.py  journal_service.py  lab_result_service.py  (+2 more)
backend/tests/: conftest.py  test_api_audit_events.py  test_api_compositions.py  test_api_consents.py  test_api_observations.py  test_api_patients.py  test_api_questionnaire_responses.py  test_audit_service.py  test_auth_middleware.py  test_auth_routes.py  test_auth_service.py  test_brief_agent.py  test_consent_middleware.py  test_consent_service.py  test_explanation_agent.py  test_fhir_helpers.py  test_health.py  test_journal_agent.py  test_journal_service.py  test_lab_result_service.py  test_mistral_utils.py  test_ocr_agent.py  test_patient_isolation.py  test_pdf_service.py  test_rate_limit.py  test_transcribe_agent.py  test_visit_brief_service.py
(+85 files in other folders)
